# haskell-strelitzia

./: LICENSE  Makefile  README.md  strelitzia.cabal
src/: CLI.hs  Main.hs  Parsers.hs  RunShell.hs  Say.hs  TeX.hs  Tlmgr.hs
