cabal-version:      3.0
name:               strelitzia
version:            0.1.0.0
-- synopsis:
description:        Install missing TeX Live packages on the fly 
license:            MIT
license-file:       LICENSE
author:             Indrjo Dedej (@indrjo)
maintainer:         dedej.indrjo@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    README.md
-- extra-source-files:

executable strelitzia
    ghc-options:      -Wall -O2 -rtsopts -fforce-recomp
    main-is:          Main.hs
    other-modules:    Parsers
                      RunShell
                      Tlmgr
                      TeX
                      CLI
                      Say
    -- other-extensions:
    build-depends:    base
                    , cond
                    , process
                    , filepath
                    , directory
                    , parsec
                    , options
    hs-source-dirs:   src
    default-language: Haskell2010
